--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -14,6 +14,8 @@
     <p>&copy <%= new Date().getFullYear() %> Michael Walters </p>
 </footer>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+
 <script src="./js/main.js"></script>
 
 </body>
